[gd_scene load_steps=9 format=3 uid="uid://7jwbl2mossb5"]

[ext_resource type="Script" path="res://scripts/ui/mainmenu.gd" id="2_yk5dd"]
[ext_resource type="PackedScene" uid="uid://cg8vmnnhfqsx8" path="res://crosspipe-new/splashes.tscn" id="3_honef"]
[ext_resource type="Theme" uid="uid://mxnsf5xnxwgi" path="res://cfg/theme.tres" id="3_m68sk"]
[ext_resource type="PackedScene" uid="uid://cnhgsfvwd0ujb" path="res://maps/welcome.tscn" id="4_84ewm"]
[ext_resource type="Shader" path="res://mat/ui/chromatic.gdshader" id="4_ly422"]
[ext_resource type="PackedScene" uid="uid://bps0u666ovdxr" path="res://crosspipe-new/console.tscn" id="6_p83wm"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_aonqa"]
shader = ExtResource("4_ly422")
shader_parameter/r_displacement = Vector2(3, 0)
shader_parameter/g_displacement = Vector2(0, 0)
shader_parameter/b_displacement = Vector2(-3, 0)

[sub_resource type="LabelSettings" id="LabelSettings_ransg"]
font_size = 64

[node name="bgmap" type="Node3D"]

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_aonqa")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_yk5dd")

[node name="Splashes" parent="UI" instance=ExtResource("3_honef")]
layout_mode = 1

[node name="title" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_right = 233.0
offset_bottom = -32.0
grow_vertical = 0
theme = ExtResource("3_m68sk")
text = "boxima"
label_settings = SubResource("LabelSettings_ransg")

[node name="Panel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1183.0
offset_top = -30.0
offset_right = 1183.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 0

[node name="menubuttons" type="HBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -34.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="newgame" type="Button" parent="UI/menubuttons"]
layout_mode = 2
text = "New game"
flat = true

[node name="VSeparator" type="VSeparator" parent="UI/menubuttons"]
layout_mode = 2
theme = ExtResource("3_m68sk")

[node name="loadgame" type="Button" parent="UI/menubuttons"]
layout_mode = 2
text = "Load game"
flat = true

[node name="VSeparator2" type="VSeparator" parent="UI/menubuttons"]
layout_mode = 2
theme = ExtResource("3_m68sk")

[node name="settings" type="Button" parent="UI/menubuttons"]
layout_mode = 2
text = "Settings"
flat = true

[node name="VSeparator3" type="VSeparator" parent="UI/menubuttons"]
layout_mode = 2
theme = ExtResource("3_m68sk")

[node name="quit" type="Button" parent="UI/menubuttons"]
layout_mode = 2
text = "Quit"
flat = true

[node name="chapter_select" type="Window" parent="UI"]
unique_name_in_owner = true
initial_position = 2
title = "New game"
size = Vector2i(450, 150)
visible = false
transient = true
unresizable = true
popup_window = true
min_size = Vector2i(450, 150)

[node name="VBoxContainer" type="VBoxContainer" parent="UI/chapter_select"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/chapter_select/VBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="UI/chapter_select/VBoxContainer/MarginContainer"]
clip_contents = false
layout_mode = 2

[node name="chapter_list" type="HBoxContainer" parent="UI/chapter_select/VBoxContainer/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="chapter_template" type="Panel" parent="UI/chapter_select/VBoxContainer/MarginContainer/ScrollContainer/chapter_list"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(128, 100)
layout_mode = 2

[node name="Button" type="Button" parent="UI/chapter_select/VBoxContainer/MarginContainer/ScrollContainer/chapter_list/chapter_template"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "name"
flat = true

[node name="welcome" parent="." instance=ExtResource("4_84ewm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.993805, 0, 0.893989)

[node name="Camera3D" type="Camera3D" parent="welcome"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.12986, 1.34493, 0.37169)
current = true

[node name="console" parent="." instance=ExtResource("6_p83wm")]

[connection signal="pressed" from="UI/menubuttons/newgame" to="UI" method="newgame_pressed"]
[connection signal="pressed" from="UI/menubuttons/settings" to="UI" method="options_pressed"]
[connection signal="pressed" from="UI/menubuttons/quit" to="UI" method="quit_pressed"]
